--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ feedparser==6.0.11
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
 matplotlib==3.9.0
 numpy==1.26.4
+scipy==1.13.1
 
 # --- Логирование ---
 loguru==0.7.2
