--- a/requirements.txt
+++ b/requirements.txt
@@ -37,4 +37,4 @@ numpy==1.26.4
 scipy==1.13.1
 
 # --- Логирование ---
-loguru==0.7.2
+# loguru убран, т.к. используется стандартный logging с JSON-форматтером
