--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ python-dotenv==1.0.1
 
 # --- Сетевое взаимодействие и утилиты ---
 aiohttp==3.9.5
+aiohttp-retry==2.8.3
 aiodns==3.2.0
 backoff==2.2.1
 google-generativeai==0.7.1
