--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 # ===============================================================
 # Файл: render.yaml (ПРОДАКШН-ВЕРСИЯ, АВГУСТ 2025)
 # Описание: Конфигурация для Render.com с разделением на web
-#           и worker, Health Check и переменными окружения.
+#           и worker, Health Check, Cron Job и переменными окружения.
 # ===============================================================
 services:
   # Web-сервис: отвечает только на health checks, потребляет минимум ресурсов
@@ -9,13 +9,13 @@ services:
     name: cryptobot-health
     env: python
     pythonVersion: "3.12.4"
-    plan: free
+    plan: free # Бесплатного плана достаточно для этой задачи
     buildCommand: "pip install --upgrade pip && pip install aiohttp==3.9.5"
     startCommand: "python -m bot.health_check_server"
     envVars:
       - key: PYTHONPATH
         value: .
-      - key: IS_WEB_PROCESS
+      - key: IS_WEB_PROCESS # Флаг для health check сервера
         value: "true"
     healthCheck:
       path: /healthz
@@ -26,7 +26,7 @@ services:
     name: cryptobot-worker
     env: python
     pythonVersion: "3.12.4"
-    plan: starter
+    plan: starter # Рекомендуется платный план для стабильной работы 24/7
     buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
     startCommand: "python -m bot.main"
     envVars:
@@ -57,6 +57,30 @@ services:
   # База данных Redis
   - type: redis
     name: cryptobot-redis
-    ipAllowList: []
+    ipAllowList: [] # Открыт для всех сервисов внутри Render
     plan: free
     maxmemoryPolicy: allkeys-lru
+
+# Cron Jobs: для выполнения регулярных задач по расписанию
+jobs:
+  - type: cron
+    name: cryptobot-update-asics
+    schedule: "0 */6 * * *" # Каждые 6 часов
+    command: "python -m bot.jobs.scheduled_tasks --task=update_asics_db_job"
+    env: python
+    pythonVersion: "3.12.4"
+    plan: free
+    envVars:
+      - key: PYTHONPATH
+        value: .
+      - key: BOT_TOKEN
+        sync: false
+      - key: ADMIN_USER_IDS
+        sync: false
+      - key: GEMINI_API_KEY
+        sync: false
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: cryptobot-redis
+          property: connectionString
