--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,39 @@
 # ===============================================================
 # Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА АВГУСТ 2025)
-# Описание: Зависимости зафиксированы для стабильной и
-#           воспроизводимой сборки на Render.
-# Runtime: Python 3.12.4
+# Описание: Зафиксированные версии для воспроизводимых сборок на Render.
+# Runtime: Python 3.12.x
 # ===============================================================
 
-# --- Ядро и фреймворк ---
-aiogram==3.10.0
-pydantic==2.8.2
-pydantic-settings==2.3.4
-python-dotenv==1.0.1
+# --- Ядро и фреймворк Telegram ---
+aiogram==3.21.0           # актуальная 3.x (05 июля 2025)
+pydantic==2.11.1          # стабильная ветка v2 (28 марта 2025)
+pydantic-settings==2.10.1 # (24 июня 2025)
+python-dotenv==1.1.1      # (23 июня 2025)
 
-# --- Сетевое взаимодействие и утилиты ---
-aiohttp==3.9.5
-aiohttp-retry==2.8.3
-aiodns==3.2.0
+# --- Сеть, HTTP-клиент и ретраи ---
+aiohttp==3.12.15          # (конец июля 2025)
+aiohttp-retry==2.9.1
 backoff==2.2.1
-google-generativeai==0.7.1
-async-lru==2.0.4
-
-# --- База данных и кэширование ---
-redis==5.0.7
 
 # --- Планировщик задач ---
-apscheduler==3.10.4
+APScheduler==3.10.4
 
-# --- Парсинг и обработка данных ---
-beautifulsoup4==4.12.3
-lxml==5.2.2
-bleach==6.1.0
-rapidfuzz==3.9.3
+# --- Парсинг и текст ---
+beautifulsoup4==4.13.4
+lxml==6.0.0
+bleach==6.2.0             # deprecated, но актуальная безопасная версия
+rapidfuzz==3.11.0
 feedparser==6.0.11
 
-# --- Научные вычисления и графики (стабильные версии для сборки) ---
-matplotlib==3.9.0
-numpy==1.26.4
-scipy==1.13.1
+# --- Научные пакеты и графики ---
+numpy==2.1.1
+matplotlib==3.9.1
+
+# --- Изображения / OCR (если используется) ---
+Pillow==11.3.0
+pytesseract==0.3.13
+
+# --- ИИ SDK (если используется внутри сервисов) ---
+openai==1.99.9
+google-generativeai==0.8.5  # EOL с 31.08.2025 — см. ОШИБКА.txt
+async-lru==2.0.5
