Добавлен резервный источник hashrate и диагностика в market_data_service

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 # ===============================================================
-# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА АВГУСТ 2025)
-# Описание: Зафиксированные версии для воспроизводимых сборок на Render.
+# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 16 авг 2025)
 # Runtime: Python 3.12.x
 # ===============================================================
 
 # --- Ядро и фреймворк Telegram ---
-aiogram==3.21.0           # актуальная 3.x (05 июля 2025)
-pydantic==2.11.1          # стабильная ветка v2 (28 марта 2025)
-pydantic-settings==2.10.1 # (24 июня 2025)
-python-dotenv==1.1.1      # (23 июня 2025)
+aiogram==3.21.0
+pydantic==2.11.1
+pydantic-settings==2.10.1
+python-dotenv==1.1.1
 
 # --- Сеть, HTTP-клиент и ретраи ---
-aiohttp==3.12.15          # (конец июля 2025)
+aiohttp==3.12.15
 aiohttp-retry==2.9.1
 backoff==2.2.1
 
@@ -21,7 +20,7 @@ APScheduler==3.10.4
 # --- Парсинг и текст ---
 beautifulsoup4==4.13.4
 lxml==6.0.0
-bleach==6.2.0             # deprecated, но актуальная безопасная версия
+bleach==6.2.0
 rapidfuzz==3.11.0
 feedparser==6.0.11
 
@@ -35,5 +34,11 @@ pytesseract==0.3.13
 
 # --- ИИ SDK (если используется внутри сервисов) ---
 openai==1.99.9
-google-generativeai==0.8.5  # EOL с 31.08.2025 — см. ОШИБКА.txt
+google-generativeai==0.8.5     # EOL с 31.08.2025 — оставить до миграции
+
+# --- Кэш / БД ---
+redis==5.0.7                   # НУЖНО для redis.asyncio
+hiredis==2.3.2                 # Быстрый парсер протокола Redis (рекомендуется)
+
+# --- Утилиты ---
 async-lru==2.0.5
