--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,46 @@
-Описание: Полный список зависимостей для production-окружения.
-Runtime: Python 3.12+
-===============================================================
---- Ядро и фреймворк Telegram ---
-aiogram>=3.5.0
-pydantic>=2.7.0
-pydantic-settings>=2.2.0
-python-dotenv>=1.0.0
+# ===============================================================
+# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 16 авг 2025)
+# Runtime: Python 3.12.x
+# ===============================================================
 
---- Сеть, HTTP-клиент и ретраи ---
-httpx>=0.27.0         # Современный асинхронный HTTP-клиент, замена aiohttp
-backoff>=2.2.1        # Для повторных запросов при сбоях сети
+# --- Ядро и фреймворк Telegram ---
+aiogram==3.21.0
+pydantic==2.11.1
+pydantic-settings==2.10.1
+python-dotenv==1.1.1
 
---- Планировщик задач ---
-apscheduler>=3.10.4
+# --- Сеть, HTTP-клиент и ретраи ---
+aiohttp==3.12.15
+aiohttp-retry==2.9.1
+backoff==2.2.1
 
---- Парсинг ---
-beautifulsoup4>=4.12.3
-lxml>=5.2.0
+# --- Планировщик задач ---
+APScheduler==3.10.4
 
---- Кэш / БД ---
-redis>=5.0.4
-hiredis>=2.3.2          # Высокопроизводительный парсер протокола Redis
+# --- Парсинг и текст ---
+beautifulsoup4==4.13.4
+lxml==6.0.0
+bleach==6.2.0
+rapidfuzz==3.11.0
+feedparser==6.0.11
 
---- Логирование и утилиты ---
-loguru>=0.7.2         # Мощное и простое логирование (решает вашу ошибку)
-async-lru>=2.0.4      # Асинхронный LRU-кэш для производительности
-PyYAML>=6.0.1         # Для работы с YAML-конфигурациями
+# --- Научные пакеты и графики ---
+numpy==2.1.1
+matplotlib==3.9.1
 
---- Веб-сервер для health checks ---
-fastapi>=0.111.0
-uvicorn>=0.29.0
+# --- Изображения / OCR (если используется) ---
+Pillow==11.3.0
+pytesseract==0.3.13
+
+# --- ИИ SDK (если используется внутри сервисов) ---
+openai==1.99.9
+google-generativeai==0.8.5     # EOL с 31.08.2025 — оставить до миграции
+
+# --- Кэш / БД ---
+redis==5.0.7                   # НУЖНО для redis.asyncio
+hiredis==2.3.2                 # Быстрый парсер протокола Redis (рекомендуется)
+
+# --- Утилиты ---
+async-lru==2.0.5
+pyyaml>=6.0
+loguru>=0.7.2
