--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # ===============================================================
-# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 16 авг 2025)
+# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 21 авг 2025)
 # Runtime: Python 3.12.x
 # ===============================================================
 
@@ -34,11 +34,11 @@ pytesseract==0.3.13
 
 # --- ИИ SDK (если используется внутри сервисов) ---
 openai==1.99.9
-google-generativeai==0.8.5     # EOL с 31.08.2025 — оставить до миграции
+google-generativeai==0.8.5
 
 # --- Кэш / БД ---
-redis==5.0.7                   # НУЖНО для redis.asyncio
-hiredis==2.3.2                 # Быстрый парсер протокола Redis (рекомендуется)
+redis==5.0.7
+hiredis==2.3.2
 
 # --- Утилиты ---
 async-lru==2.0.5
