--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,50 @@
-# ===============================================================
-# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 21 авг 2025)
-# Runtime: Python 3.12.x
-# ===============================================================
+===============================================================
+Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 21 авг 2025)
+Runtime: Python 3.12.x
+===============================================================
+--- Ядро и фреймворк Telegram ---
+aiogram==3.8.0
+pydantic==2.8.2
+pydantic-settings==2.3.4
+python-dotenv==1.0.1
 
-# --- Ядро и фреймворк Telegram ---
-aiogram==3.21.0
-pydantic==2.11.1
-pydantic-settings==2.10.1
-python-dotenv==1.1.1
+--- Архитектура и DI ---
+dependency-injector==4.41.0
 
-# --- Сеть, HTTP-клиент и ретраи ---
-aiohttp==3.12.15
-aiohttp-retry==2.9.1
-backoff==2.2.1
+--- Сеть, HTTP-клиент и ретраи ---
+aiohttp==3.9.5
 
-# --- Планировщик задач ---
+aiohttp-retry==2.9.1 # Рекомендуется для повышения надежности
+backoff==2.2.1 # Рекомендуется для повышения надежности
+--- Планировщик задач ---
 APScheduler==3.10.4
 
-# --- Парсинг и текст ---
-beautifulsoup4==4.13.4
-lxml==6.0.0
-bleach==6.2.0
-rapidfuzz==3.11.0
-feedparser==6.0.11
-
-# --- Научные пакеты и графики ---
-numpy==2.1.1
+--- Парсинг и текст ---
+beautifulsoup4==4.13.4 # Для будущего парсинга HTML
+lxml==6.0.0 # Для будущего парсинга XML/HTML
+bleach==6.2.0 # Для очистки HTML
+rapidfuzz==3.9.4 # Для нечеткого сравнения строк
+feedparser==6.0.11 # Для парсинга RSS/Atom лент
+--- Научные пакеты и графики ---
+numpy==2.0.0 # Если потребуется для вычислений
 matplotlib==3.9.1
 
-# --- Изображения / OCR (если используется) ---
-Pillow==11.3.0
-pytesseract==0.3.13
+--- Изображения / OCR ---
+Pillow==10.4.0
 
-# --- ИИ SDK (если используется внутри сервисов) ---
-openai==1.99.9
-google-generativeai==0.8.5
-
-# --- Кэш / БД ---
+pytesseract==0.3.13 # Если потребуется распознавание текста
+--- ИИ SDK ---
+openai==1.35.13 # Если потребуется интеграция с OpenAI
+google-generativeai==0.7.2 # Если потребуется интеграция с Google AI
+--- Кэш / БД ---
 redis==5.0.7
-hiredis==2.3.2
 
-# --- Утилиты ---
-async-lru==2.0.5
-pyyaml>=6.0
-loguru>=0.7.2
+hiredis==2.3.2 # Опциональное ускорение для Redis
+--- Утилиты ---
+async-lru==2.0.4 # Для асинхронного LRU кеша в памяти
+PyYAML==6.0.1
+loguru==0.7.2
+
+--- Веб-сервер (Health Check) ---
+fastapi==0.111.1
+uvicorn[standard]==0.30.1
