--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,44 @@
-===============================================================
-Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 21 авг 2025)
-Runtime: Python 3.12.x
-===============================================================
---- Ядро и фреймворк Telegram ---
+# ===============================================================
+# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 21 авг 2025)
+# Runtime: Python 3.12.x
+# ===============================================================
+
+# --- Ядро и фреймворк Telegram ---
 aiogram==3.8.0
 pydantic==2.8.2
 pydantic-settings==2.3.4
 python-dotenv==1.0.1
 
---- Архитектура и DI ---
+# --- Архитектура и DI ---
 dependency-injector==4.41.0
 
---- Сеть, HTTP-клиент и ретраи ---
+# --- Сеть, HTTP-клиент и ретраи ---
 aiohttp==3.9.5
+backoff==2.2.1
 
-aiohttp-retry==2.9.1 # Рекомендуется для повышения надежности
-backoff==2.2.1 # Рекомендуется для повышения надежности
---- Планировщик задач ---
+# --- Планировщик задач ---
 APScheduler==3.10.4
 
---- Парсинг и текст ---
-beautifulsoup4==4.13.4 # Для будущего парсинга HTML
-lxml==6.0.0 # Для будущего парсинга XML/HTML
-bleach==6.2.0 # Для очистки HTML
-rapidfuzz==3.9.4 # Для нечеткого сравнения строк
-feedparser==6.0.11 # Для парсинга RSS/Atom лент
---- Научные пакеты и графики ---
-numpy==2.0.0 # Если потребуется для вычислений
+# --- Парсинг и текст ---
+beautifulsoup4==4.13.4
+lxml==6.0.0
+bleach==6.2.0
+rapidfuzz==3.9.4
+
+# --- Научные пакеты и графики ---
 matplotlib==3.9.1
 
---- Изображения / OCR ---
+# --- Изображения ---
 Pillow==10.4.0
 
-pytesseract==0.3.13 # Если потребуется распознавание текста
---- ИИ SDK ---
-openai==1.35.13 # Если потребуется интеграция с OpenAI
-google-generativeai==0.7.2 # Если потребуется интеграция с Google AI
---- Кэш / БД ---
-redis==5.0.7
+# --- ИИ SDK ---
+openai==1.35.13
+google-generativeai==0.7.2
 
-hiredis==2.3.2 # Опциональное ускорение для Redis
---- Утилиты ---
-async-lru==2.0.4 # Для асинхронного LRU кеша в памяти
+# --- Кэш / БД ---
+redis==5.0.7
+async-lru==2.0.4
+
+# --- Утилиты ---
 PyYAML==6.0.1
 loguru==0.7.2
-
---- Веб-сервер (Health Check) ---
-fastapi==0.111.1
-uvicorn[standard]==0.30.1
