--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # ===============================================================
-# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 21 авг 2025)
+# Файл: requirements.txt (ПРОДАКШН-ВЕРСЯ, АКТУАЛЬНО НА 21 авг 2025)
 # Runtime: Python 3.12.x
 # ===============================================================
 
 # --- Ядро и фреймворк Telegram ---
 aiogram==3.8.0
-pydantic==2.8.2
+pydantic==2.7.4
 pydantic-settings==2.3.4
 python-dotenv==1.0.1
 
