--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # ===============================================================
-# Файл: requirements.txt (ПРОДАКШН-ВЕРСЯ, АКТУАЛЬНО НА 21 авг 2025)
+# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ, АКТУАЛЬНО НА 22 авг 2025)
 # Runtime: Python 3.12.x
 # ===============================================================
 
