--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,12 @@ aiocache==0.12.3
 aiohttp==3.11.10
 httpx==0.27.2
 
-# Validation (FIXED: compatible with aiogram 3.22.0)
+# Validation (compatible with aiogram 3.22.0)
 pydantic==2.11.1
 pydantic-settings==2.3.4
+
+# Dependency Injection
+dependency-injector==4.41.0
 
 # Utilities
 backoff==2.2.1
@@ -38,6 +41,3 @@ apscheduler==3.10.4
 
 # Security
 cryptography==43.0.3
-
-# Optional: if you need Pillow for images
-# Pillow==10.4.0
