--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ pydantic-settings==2.3.4
 # Dependency Injection
 dependency-injector==4.41.0
 
+# Logging
+loguru==0.7.3
+
 # Utilities
 backoff==2.2.1
 
